[DDW-91] fix broken styles with upcoming 0.6.1 relese of react-polymorph

--- a/source/renderer/app/components/widgets/forms/ReadOnlyInput.scss
+++ b/source/renderer/app/components/widgets/forms/ReadOnlyInput.scss
@@ -10,7 +10,8 @@
     }
 
     .SimpleInput_disabled {
-      & .SimpleInput_input {
+      background: none;
+      .SimpleInput_input {
         background-color: var(--theme-input-background-color);
         border-color: var(--theme-input-border-color);
         color: var(--theme-input-text-color) !important;
